# backend/Leafy_api/swagger/swagger.yml
@@ -80,6 +80,63 @@ paths:
             $ref: '#/definitions/models.Disease'
         "403":
           description: :id is empty
+  /notifications/:
+    post:
+      tags:
+      - notifications
+      description: |-
+        Add a Notification
+        <br>
+      operationId: NotificationController.Post
+      parameters:
+      - in: body
+        name: body
+        description: 'The notfication, date specified like so: YYYY-MM-DD hh:mm:ss+tz
+          (for kaliningrad = 02)'
+        required: true
+        schema:
+          $ref: '#/definitions/models.Notification'
+      responses:
+        "200":
+          description: ""
+          schema:
+            format: int64
+            type: integer
+  /notifications/{uid}:
+    get:
+      tags:
+      - notifications
+      description: |-
+        Gather Notifs by Id
+        <br>
+      operationId: NotificationController.Get
+      parameters:
+      - in: path
+        name: uid
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Response'
+    delete:
+      tags:
+      - notifications
+      description: |-
+        Delete all expired notifications
+        <br>
+      operationId: NotificationController.Delete
+      parameters:
+      - in: path
+        name: uid
+        description: The user_id for which you check and delete notifications
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} success'
   /user/:
     get:
       tags:
@@ -99,6 +156,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.User'
+        "401":
+          description: :not authorized
     post:
       tags:
       - user
@@ -129,7 +188,7 @@ paths:
       parameters:
       - in: path
         name: uid
-        description: The key for staticblock
+        description: The uid
         required: true
         type: string
       responses:
@@ -257,6 +316,21 @@ definitions:
         type: string
       Treatment:
         type: string
+  models.Notification:
+    title: Notification
+    type: object
+    properties:
+      Data:
+        type: string
+      Notif_id:
+        type: integer
+        format: int64
+      Time:
+        type: string
+        format: datetime
+      User_id:
+        type: integer
+        format: int64
   models.PlantType:
     title: PlantType
     type: object
@@ -271,6 +345,9 @@ definitions:
       WateringFrequency:
         type: integer
         format: int64
+  models.Response:
+    title: Response
+    type: object
   models.User:
     title: User
     type: object
@@ -299,4 +376,7 @@ tags:
     Операции с заболеваниями
 - name: user_plants
   description: |
-    Operations about User's plants
+    Operations about User's plants(Unfinished)
+- name: notifications
+  description: |
+    Operations about Notifications (as of now, only used in WebSockets, probably wont go in the final app)
